--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html * {
+  padding: 0;
+  margin: 0;
+}
 .carousel {
   margin-top: 65px;
 }
@@ -15,6 +19,13 @@ h5 {
 }
 
 body {
-  background-color: aquamarine;
-  background-size: 100vh;
+  background-color: rgb(94, 226, 182);
+  background-image: url(img/bg6.jpg);
+  background-size: 100%;
+}
+
+.send:hover {
+  box-shadow: 100px;
+  color: darkgrey;
+  background-color: rgb(46, 45, 45);
 }
